Get rid of verify-no-string-interpolation-leftovers in favor of (hacked) ArchUnit test